reformat the source code - fix potential errors - and replace the python report template with a .jinja file

--- a/Src/report.jinja
+++ b/Src/report.jinja
@@ -1,4 +1,4 @@
-report_template = """<!doctype html>
+<!doctype html>
 <html lang="de">
 <head>
   <meta charset="UTF-8">
@@ -7,51 +7,51 @@ report_template = """<!doctype html>
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Schulsprecherwahl Bericht</title>
   <style>
-    body {
-      background-color: #eeeeee;
-      font-family: sans-serif;
-    }
+      body {
+          background-color: #eeeeee;
+          font-family: sans-serif;
+      }
 
-    .container {
-      background-color: white;
-      margin: 15px auto;
-      padding: 8px 25px;
-      width: 800px;
-      box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
-    }
+      .container {
+          background-color: white;
+          margin: 15px auto;
+          padding: 8px 25px;
+          width: 800px;
+          box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.3);
+      }
 
-    h1 {
-      text-align: center;
-    }
+      h1 {
+          text-align: center;
+      }
 
-    h3 {
-      margin: 12px 0 10px;
-      text-align: right;
-    }
+      h3 {
+          margin: 12px 0 10px;
+          text-align: right;
+      }
 
-    .participant {
-      margin-bottom: 20px;
-      padding: 5px 3px 5px 10px;
-      border-left: 3px solid lightblue;
-    }
+      .participant {
+          margin-bottom: 20px;
+          padding: 5px 3px 5px 10px;
+          border-left: 3px solid lightblue;
+      }
 
-    .participant:hover {
-      background-color: #f6f6f6;
-      border-radius: 3px;
-    }
+      .participant:hover {
+          background-color: #f6f6f6;
+          border-radius: 3px;
+      }
 
-    .participant > h4 {
-      margin: 0;
-      color: orange;
-    }
+      .participant > h4 {
+          margin: 0;
+          color: orange;
+      }
 
-    .participant > h4 > small {
-      color: black;
-    }
+      .participant > h4 > small {
+          color: black;
+      }
 
-    .participant > p {
-      color: #808080;
-    }
+      .participant > p {
+          color: #808080;
+      }
   </style>
 </head>
 <body>
@@ -83,4 +83,3 @@ report_template = """<!doctype html>
   </div>
 </body>
 </html>
-"""
